--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
         max_attempts: 5
         window: 10s
       labels:
+        - "traefik.enable=true"
         - "traefik.http.middlewares.traefik-auth.basicauth.users=admin:$$apr1$$xYyUiFZg$$mzOfwqqPdlxByOfqowLH/."
         - "traefik.http.routers.traefik.middlewares=traefik-auth"
 
